grid gap fix

--- a/src/components/Problem/Problem.module.css
+++ b/src/components/Problem/Problem.module.css
@@ -1,7 +1,7 @@
 .bottom {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  grid-gap: 2rem;
+  /* grid-gap: 2rem; */
   margin-top: 10rem;
 }
 
